--- a/asset.yaml
+++ b/asset.yaml
@@ -1,332 +1,12 @@
-# BUCKET - Place
-apiVersion: bucket/v1
-kind: Schema
-metadata:
-  name: place
-spec:
-  title: Place
-  description: Describe your new bucket
-  icon: label_important
-  primary: name
-  readOnly: false
-  history: false
-  properties:
-    images:
-      type: array
-      title: images
-      description: Description of the images input
-      options:
-        position: bottom
-      items:
-        title: Title of the items
-        type: storage
-    name:
-      type: string
-      title: name
-      description: Description of the name input
-      options:
-        position: bottom
-    mail:
-      type: string
-      title: mail
-      description: Description of the mail input
-      options:
-        position: bottom
-    description:
-      type: textarea
-      title: description
-      description: Description of the description input
-      options:
-        position: bottom
-    phone:
-      type: string
-      title: phone
-      description: Description of the phone input
-      options:
-        position: bottom
-    url:
-      type: string
-      title: url
-      description: Description of the url input
-      options:
-        position: bottom
-    adress:
-      type: string
-      title: address
-      description: Description of the adress input
-      options:
-        position: bottom
-    location:
-      type: location
-      title: location
-      description: Description of the location input
-      options:
-        position: bottom
-      locationType: Point
-    working_hours:
-      type: array
-      title: working_hours
-      description: Description of the working_hours input
-      options:
-        position: bottom
-      items:
-        title: Title of the items
-        type: object
-        properties:
-          day_of_week:
-            type: number
-            title: day_of_week
-            description: Description of the day_of_week input
-            options:
-              position: bottom
-            enum:
-              - 1
-              - 2
-              - 3
-              - 4
-              - 5
-              - 6
-              - 7
-          hours:
-            type: array
-            title: hours
-            description: Description of the hours input
-            options:
-              position: bottom
-            items:
-              title: Title of the items
-              type: object
-              properties:
-                from:
-                  type: string
-                  title: from
-                  description: Description of the from input
-                  options:
-                    position: bottom
-                  pattern: ^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$
-                until:
-                  type: string
-                  title: until
-                  description: Description of the until input
-                  options:
-                    position: bottom
-                  pattern: ^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$
-          rush_hours:
-            type: array
-            title: rush_hours
-            description: Description of the rush_hours input
-            options:
-              position: bottom
-            items:
-              title: Title of the items
-              type: object
-              properties:
-                from:
-                  type: string
-                  title: from
-                  description: Description of the from input
-                  options:
-                    position: bottom
-                  pattern: ^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$
-                until:
-                  type: string
-                  title: until
-                  description: Description of the until input
-                  options:
-                    position: bottom
-                  pattern: ^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$
-    city:
-      type: string
-      title: city
-      description: Description of the city input
-      options:
-        position: bottom
-    country:
-      type: string
-      title: country
-      description: Description of the country input
-      options:
-        position: bottom
-  acl:
-    write: true==true
-    read: true==true
-  order: 0
----
-# BUCKET - Place
-apiVersion: bucket/v1
-kind: Schema
-metadata:
-  name: place
-spec:
-  title: Place
-  description: Describe your new bucket
-  icon: label_important
-  primary: name
-  readOnly: false
-  history: false
-  properties:
-    images:
-      type: array
-      title: images
-      description: Description of the images input
-      options:
-        position: bottom
-      items:
-        title: Title of the items
-        type: storage
-    name:
-      type: string
-      title: name
-      description: Description of the name input
-      options:
-        position: bottom
-    mail:
-      type: string
-      title: mail
-      description: Description of the mail input
-      options:
-        position: bottom
-    description:
-      type: textarea
-      title: description
-      description: Description of the description input
-      options:
-        position: bottom
-    phone:
-      type: string
-      title: phone
-      description: Description of the phone input
-      options:
-        position: bottom
-    url:
-      type: string
-      title: url
-      description: Description of the url input
-      options:
-        position: bottom
-    adress:
-      type: string
-      title: address
-      description: Description of the adress input
-      options:
-        position: bottom
-    location:
-      type: location
-      title: location
-      description: Description of the location input
-      options:
-        position: bottom
-      locationType: Point
-    comment:
-      type: relation
-      title: ratings
-      description: Description of the comment input
-      options:
-        position: bottom
-      relationType: onetomany
-      dependent: false
-      primary: title
-      bucket:
-        resourceFieldRef:
-          schemaName: rating
-    working_hours:
-      type: array
-      title: working_hours
-      description: Description of the working_hours input
-      options:
-        position: bottom
-      items:
-        title: Title of the items
-        type: object
-        properties:
-          day_of_week:
-            type: number
-            title: day_of_week
-            description: Description of the day_of_week input
-            options:
-              position: bottom
-            enum:
-              - 1
-              - 2
-              - 3
-              - 4
-              - 5
-              - 6
-              - 7
-          hours:
-            type: array
-            title: hours
-            description: Description of the hours input
-            options:
-              position: bottom
-            items:
-              title: Title of the items
-              type: object
-              properties:
-                from:
-                  type: string
-                  title: from
-                  description: Description of the from input
-                  options:
-                    position: bottom
-                  pattern: ^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$
-                until:
-                  type: string
-                  title: until
-                  description: Description of the until input
-                  options:
-                    position: bottom
-                  pattern: ^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$
-          rush_hours:
-            type: array
-            title: rush_hours
-            description: Description of the rush_hours input
-            options:
-              position: bottom
-            items:
-              title: Title of the items
-              type: object
-              properties:
-                from:
-                  type: string
-                  title: from
-                  description: Description of the from input
-                  options:
-                    position: bottom
-                  pattern: ^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$
-                until:
-                  type: string
-                  title: until
-                  description: Description of the until input
-                  options:
-                    position: bottom
-                  pattern: ^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$
-    city:
-      type: string
-      title: city
-      description: Description of the city input
-      options:
-        position: bottom
-    country:
-      type: string
-      title: country
-      description: Description of the country input
-      options:
-        position: bottom
-  acl:
-    write: true==true
-    read: true==true
-  order: 0
----
 # BUCKET - Rating
 apiVersion: bucket/v1
 kind: Schema
 metadata:
-  name: rating
+  name: rating-bucket
 spec:
   title: Rating
   description: Describe your new bucket
-  icon: label_important
+  icon: star
   primary: title
   readOnly: false
   history: false
@@ -367,15 +47,181 @@ spec:
     read: true==true
   order: 1
 ---
+# BUCKET - Place
+apiVersion: bucket/v1
+kind: Schema
+metadata:
+  name: place-bucket
+spec:
+  title: Place
+  description: Describe your new bucket
+  icon: store
+  primary: name
+  readOnly: false
+  history: false
+  properties:
+    images:
+      type: array
+      title: images
+      description: Description of the images input
+      options:
+        position: bottom
+      items:
+        title: Title of the items
+        type: storage
+    name:
+      type: string
+      title: name
+      description: Description of the name input
+      options:
+        position: bottom
+    mail:
+      type: string
+      title: mail
+      description: Description of the mail input
+      options:
+        position: bottom
+    description:
+      type: textarea
+      title: description
+      description: Description of the description input
+      options:
+        position: bottom
+    phone:
+      type: string
+      title: phone
+      description: Description of the phone input
+      options:
+        position: bottom
+    url:
+      type: string
+      title: url
+      description: Description of the url input
+      options:
+        position: bottom
+    adress:
+      type: string
+      title: address
+      description: Description of the adress input
+      options:
+        position: bottom
+    location:
+      type: location
+      title: location
+      description: Description of the location input
+      options:
+        position: bottom
+      locationType: Point
+    ratings:
+      type: relation
+      title: ratings
+      description: Description of the comment input
+      options:
+        position: bottom
+      relationType: onetomany
+      dependent: false
+      primary: title
+      bucket:
+        resourceFieldRef:
+          schemaName: rating-bucket
+    working_hours:
+      type: array
+      title: working_hours
+      description: Description of the working_hours input
+      options:
+        position: bottom
+      items:
+        title: Title of the items
+        type: object
+        properties:
+          day_of_week:
+            type: number
+            title: day_of_week
+            description: Description of the day_of_week input
+            options:
+              position: bottom
+            enum:
+              - 1
+              - 2
+              - 3
+              - 4
+              - 5
+              - 6
+              - 7
+          hours:
+            type: array
+            title: hours
+            description: Description of the hours input
+            options:
+              position: bottom
+            items:
+              title: Title of the items
+              type: object
+              properties:
+                from:
+                  type: string
+                  title: from
+                  description: Description of the from input
+                  options:
+                    position: bottom
+                  pattern: ^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$
+                until:
+                  type: string
+                  title: until
+                  description: Description of the until input
+                  options:
+                    position: bottom
+                  pattern: ^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$
+          rush_hours:
+            type: array
+            title: rush_hours
+            description: Description of the rush_hours input
+            options:
+              position: bottom
+            items:
+              title: Title of the items
+              type: object
+              properties:
+                from:
+                  type: string
+                  title: from
+                  description: Description of the from input
+                  options:
+                    position: bottom
+                  pattern: ^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$
+                until:
+                  type: string
+                  title: until
+                  description: Description of the until input
+                  options:
+                    position: bottom
+                  pattern: ^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$
+    city:
+      type: string
+      title: city
+      description: Description of the city input
+      options:
+        position: bottom
+    country:
+      type: string
+      title: country
+      description: Description of the country input
+      options:
+        position: bottom
+  acl:
+    write: true==true
+    read: true==true
+  order: 0
+---
 # BUCKET - Public Holiday
 apiVersion: bucket/v1
 kind: Schema
 metadata:
-  name: public-holiday
+  name: public-holiday-bucket
 spec:
   title: Public Holiday
   description: Describe your new bucket
-  icon: label_important
+  icon: domain_disabled
   primary: name
   readOnly: false
   history: false
